# Type-Hints

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
BASIC/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tuple.py  typealias.py  union.py  variable.py
