[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 80
skip_gitignore = true
multi_line_output = 3

[tool.pyright]
reportProgress = false

[tool.poetry]
name = "typing"
version = "0.1.0"
description = "Тренажер по аннотации типов"
authors = ["Ivan1586"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.384"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
